-Some refactorings